--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rohithbalasubramani.github.io//EMSFront",
+  "homepage": "https://rohithbalasubramani.github.io//EMSFront",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
