--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@uiw/react-heat-map": "^2.2.2",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
@@ -33,7 +35,7 @@
     "react-open-weather": "^1.3.2",
     "react-pdf": "^7.6.0",
     "react-router-dom": "^6.21.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.12.5",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
