--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://RohithBalasubramani.github.io/UppalFront",
+  "homepage": "https://therion.in/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +10,7 @@
     "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
     "@mui/x-charts": "^7.2.0",
-    "@mui/x-date-pickers": "^6.18.6",
+    "@mui/x-date-pickers": "^7.12.0",
     "@react-pdf/renderer": "^3.1.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +21,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "gh-pages": "^6.1.1",
@@ -28,18 +29,24 @@
     "highcharts-react-official": "^3.2.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "react": "^18.2.0",
+    "plotly.js": "^2.34.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^7.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.21",
     "react-heatmap-grid": "^0.9.0",
     "react-open-weather": "^1.3.2",
     "react-pdf": "^7.6.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.12.5",
     "styled-components": "^6.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "predeploy": "npm run build",
